[tool.poetry]
name = "pagerduty-auto-ack"
version = "1.0.0"
description = "Automatic acks for the PagerDuty incidents"
authors = ["dezeroku <dezeroku@gmail.com>"]
repository = "https://github.com/Aliceonly/pagerduty-auto-ack"
license = "MIT"
readme = "README.md"

packages = [
    { include = "pagerduty_auto_ack" },
    { include = "schedule_handler" },
]

[tool.poetry.dependencies]
python = "^3.11"
pdpyras = "^5.1.3"
pandas = "^2.0"
gspread = "^6.0"
oauth2client = "^4.1.3"
requests = "^2.31"

[tool.poetry.scripts]
pagerduty-auto-ack = "pagerduty_auto_ack.cli:main"
get-schedule = "schedule_handler.getSchedule:main"
override-schedule = "schedule_handler.overrideSchedule:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
